--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ input {
 }
 
 button {
-    background-color: #007bff;
+    background-color: #ff000067;
     color: white;
     padding: 10px;
     border: none;
