--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ input {
 }
 
 button {
-    background-color: #ff000067;
+    background-color: #5b0404;
     color: white;
     padding: 10px;
     border: none;
@@ -51,7 +51,7 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #613333;
 }
 
 #result {
